fixed link spacing

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -88,7 +88,7 @@
 
 .tableOfContents {
 	ul li {
-		height: 48px;
+		padding: 12px 0;
 	}
 	a {
 		height: 48px;
